--- a/nextflow.config
+++ b/nextflow.config
@@ -93,10 +93,10 @@ dag {
 }
 
 manifest {
-    name            = 'PTM-compass'
+    name            = 'PTM-Solver'
     author          = """Jose Rodríguez"""
-    homePage        = 'https://github.com/CNIC-Proteomics/nf-PTM-compass'
-    description     = """PTM-compass workflow"""
+    homePage        = 'https://github.com/CNIC-Proteomics/nf-PTM-Solver'
+    description     = """PTM-Solver workflow"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.10.1'
     version         = '0.0.1'
