--- a/params/fixed_params.ini
+++ b/params/fixed_params.ini
@@ -11,6 +11,84 @@ create_ini = 0                # Create copy of INI file in input directory, 0=no
 
 
 ############################
+# REFRAG PARAMETERS ------ #
+############################
+
+[Search]
+batch_size = 1000	# Batch size
+f_tol = 20		# Fragment mass tolerance (ppm)
+t_tol = 20		# Tie-breaker tolerance (ppm)
+t_min = 0.7		# Minimum percentage of tied scores for tie-breaking
+dm_tol = 3		# Theoretical DM tolerance (Da)
+decoy_prefix = DECOY	# Decoy label
+
+[Spectrum Processing]
+top_n = 100		# Maximum number of peaks (sorted by intensity) to keep from a spectrum
+min_ratio = 0.01	# Remove peaks less intense than this multiple of the base peak intensity
+bin_top_n = false	# Bin spectra according to average aminoacid mass (110 Da) and apply top_n filter to each bin
+min_fragment_mz = 0	# Only use fragments with m/z bigger than this value
+max_fragment_mz = 0 	# Only use fragments with m/z smaller than this value. A value of 0 ignores this parameter.
+deisotope = false	# Perform deisotoping
+
+[Aminoacids]
+A = 71.037114
+R = 156.101111
+N = 114.042927
+D = 115.026943
+C = 103.009185
+E = 129.042593
+Q = 128.058578
+G = 57.021464
+H = 137.058912
+I = 113.084064
+L = 113.084064
+K = 128.094963
+M = 131.040485
+F = 147.068414
+P = 97.052764
+S = 87.032028
+T = 101.047679
+U = 150.953630
+W = 186.079313
+Y = 163.063329
+V = 99.068414
+O = 132.089878
+Z = 129.042594
+
+[Fixed Modifications]
+Nt = 0         
+Ct = 0
+A = 0
+R = 0
+N = 0
+D = 0
+C = 57.021464 # Carbamidomethyl
+E = 0
+Q = 0
+G = 0
+H = 0
+I = 0
+L = 0
+K = 0           
+M = 0
+F = 0
+P = 0
+S = 0
+T = 0
+U = 0
+W = 0
+Y = 0
+V = 0
+O = 0
+
+[Masses]
+m_proton = 1.007276
+m_hydrogen = 1.007825
+m_oxygen = 15.994915
+
+
+
+############################
 # SHIFTS PARAMETERS ------ #
 ############################
 
